2009-01-01  Sven Neumann  <sven@gimp.org>

	* app/tools/gimptexttool.c: removed unused include.

2009-01-01  Sven Neumann  <sven@gimp.org>

	Bug 565112 – code duplication in app/core/gimpimage-snap.c

	* app/core/gimpimage-snap.c: based on a patch from Daniel Hornung,
	add the utility function gimp_image_snap_distance().

2009-01-01  Sven Neumann  <sven@gimp.org>

	* app/about.h (GIMP_COPYRIGHT): Happy New Year!

2009-01-01  Sven Neumann  <sven@gimp.org>

	Bug 565223 – Perspective transformation jagged edges / comb effect

	* app/core/gimp-transform-region.c: reverted the code change, but
	not the cleanups, from commit r26786.

2008-12-31  Sven Neumann  <sven@gimp.org>

	* app/widgets/widgets-enums.[ch]: added GimpTagEntryMode.

	* app/widgets/gimptagentry.[ch]: removed it here. Also did some
	code cleanup, mostly formatting.

	* app/widgets/gimpcombotagentry.[ch]
	* app/widgets/gimptagpopup.[ch]: some code cleanup, mostly
	formatting.

2008-12-30  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpitemtreeview.h: deleted trailing whitespace.

2008-12-30  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print.[ch]
	* plug-ins/print/print-draw-page.c
	* plug-ins/print/print-page-layout.c
	* plug-ins/print/print-settings.c: optionally draw crop-marks.

2008-12-30  Marco Ciampa  <ciampix@libero.it>

	* app/actions/error-console-actions.c: small typo fix.

2008-12-28  Martin Nordholts  <martinn@svn.gnome.org>

	* app/core/gimpitem.c
	(gimp_item_get_offset_x)
	(gimp_item_get_offset_y): New offset getters for inline use.

	* app/core/gimpchannel.c
	* app/core/gimpdrawable.c
	* app/core/gimpimage-merge.c
	* app/core/gimpimage-resize.c
	* app/tools/gimptexttool.c: Don't access GimpItem offset members
	directly, use gimp_item_set_offset() and
	gimp_item_get_offset_[xy]() instead.

2008-12-28  Sven Neumann  <sven@gimp.org>

	Bug 563985 – jpg save dialog: "cancel" is treated like "commit"
	for settings

	* plug-ins/file-jpeg/jpeg.c (run): only attach the comment and